--- a/ar_view.html
+++ b/ar_view.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR View | Smart Environment Monitor</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Smart Environment AR View</title>
+  <link rel="stylesheet" href="css/style.css" />
+
+  <!-- Three.js & Loaders -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/OBJLoader.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/MTLLoader.js"></script>
 </head>
+
 <body>
   <header>
     <h1>🌤️ Smart Environment AR View</h1>
@@ -29,9 +33,10 @@
       const arSection = document.getElementById("ar-section");
       arSection.classList.remove("hidden");
 
-      // Siapkan kamera video
       const videoContainer = document.getElementById("camera-container");
-      videoContainer.innerHTML = '';
+      videoContainer.innerHTML = "";
+
+      // ===== 1️⃣ AKTIFKAN KAMERA =====
       const video = document.createElement("video");
       video.autoplay = true;
       video.playsInline = true;
@@ -40,15 +45,15 @@
       try {
         const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } });
         video.srcObject = stream;
-      } catch(err) {
-        alert("Gagal akses kamera: " + err);
+      } catch (err) {
+        alert("Gagal mengakses kamera: " + err);
         return;
       }
 
-      // Setup Three.js
+      // ===== 2️⃣ SETUP THREE.JS =====
       const scene = new THREE.Scene();
       const camera = new THREE.PerspectiveCamera(75, videoContainer.clientWidth / videoContainer.clientHeight, 0.1, 1000);
-      camera.position.z = 2;
+      camera.position.z = 3;
 
       const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
       renderer.setSize(videoContainer.clientWidth, videoContainer.clientHeight);
@@ -57,44 +62,54 @@
       renderer.domElement.style.left = 0;
       videoContainer.appendChild(renderer.domElement);
 
-      // Lampu
+      // ===== 3️⃣ LAMPU =====
+      const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
       const dirLight = new THREE.DirectionalLight(0xffffff, 1);
       dirLight.position.set(1, 1, 1);
-      scene.add(dirLight);
-      scene.add(new THREE.AmbientLight(0xffffff, 0.6));
+      scene.add(ambientLight, dirLight);
 
-      // Tambahkan plane video agar video tampil di background AR
+      // ===== 4️⃣ BACKGROUND KAMERA =====
       const videoTexture = new THREE.VideoTexture(video);
-      const videoGeometry = new THREE.PlaneGeometry(4, 3);
       const videoMaterial = new THREE.MeshBasicMaterial({ map: videoTexture });
+      const videoGeometry = new THREE.PlaneGeometry(4, 3);
       const videoMesh = new THREE.Mesh(videoGeometry, videoMaterial);
-      videoMesh.position.z = -2;
+      videoMesh.position.z = -3;
       scene.add(videoMesh);
 
-      // Load model OBJ
-      const loader = new THREE.OBJLoader();
-      loader.load('assets/models/cloud.obj', (obj) => {
-        obj.scale.set(0.5, 0.5, 0.5);
-        obj.position.set(0, 0, 0);
-        scene.add(obj);
+      // ===== 5️⃣ LOAD MODEL OBJ + MTL =====
+      const objPath = "assets/models/cloud.obj";
+      const mtlPath = "assets/models/cloud.mtl";
 
-        // Animasi rotasi model
-        function animate() {
-          requestAnimationFrame(animate);
-          obj.rotation.y += 0.01;
-          obj.position.y = 0.2 * Math.sin(Date.now() * 0.002);
-          renderer.render(scene, camera);
-        }
-        animate();
-      }, 
-      (xhr) => {
-        console.log((xhr.loaded / xhr.total * 100) + '% loaded');
-      }, 
-      (error) => {
-        console.error('Gagal load OBJ:', error);
+      const mtlLoader = new THREE.MTLLoader();
+      mtlLoader.load(mtlPath, (materials) => {
+        materials.preload();
+
+        const objLoader = new THREE.OBJLoader();
+        objLoader.setMaterials(materials);
+
+        objLoader.load(
+          objPath,
+          (object) => {
+            console.log("✅ Model loaded successfully!");
+            object.scale.set(1, 1, 1);
+            object.position.set(0, 0, 0);
+            scene.add(object);
+
+            // Animasi model
+            function animate() {
+              requestAnimationFrame(animate);
+              object.rotation.y += 0.01;
+              object.position.y = 0.2 * Math.sin(Date.now() * 0.002);
+              renderer.render(scene, camera);
+            }
+            animate();
+          },
+          (xhr) => console.log(`Loading model: ${Math.round((xhr.loaded / xhr.total) * 100)}%`),
+          (err) => console.error("❌ Gagal memuat model:", err)
+        );
       });
 
-      // Responsif
+      // ===== 6️⃣ RESPONSIVE =====
       window.addEventListener("resize", () => {
         camera.aspect = videoContainer.clientWidth / videoContainer.clientHeight;
         camera.updateProjectionMatrix();
