--- a/ar_view.html
+++ b/ar_view.html
@@ -5,51 +5,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Smart Environment AR View</title>
 
-  <!-- A-Frame dan AR.js -->
-  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar-nft.js"></script>
+  <!-- Import tag <model-viewer> -->
+  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.3.0/model-viewer.min.js"></script>
 
   <style>
     body {
       margin: 0;
-      overflow: hidden;
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to bottom right, #f9fbff, #d9e7ff);
+      background: linear-gradient(to bottom right, #e9f3ff, #d9e7ff);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      height: 100vh;
     }
 
     header {
-      text-align: center;
-      padding: 15px;
-      font-size: 1.5rem;
+      font-size: 1.6rem;
       font-weight: 600;
       color: #007bff;
-    }
-
-    .container {
+      padding: 15px;
       text-align: center;
-      padding-top: 10px;
     }
 
-    #startButton {
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      padding: 10px 20px;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: 0.3s;
+    .viewer-container {
+      flex: 1;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
-    #startButton:hover {
-      background-color: #0056b3;
+    model-viewer {
+      width: 90%;
+      height: 80%;
+      border-radius: 15px;
+      background-color: #f1f5ff;
+      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
     }
 
     footer {
       text-align: center;
-      font-size: 0.9rem;
-      color: gray;
       padding: 15px;
+      font-size: 0.9rem;
+      color: #555;
+    }
+
+    @media (max-width: 768px) {
+      model-viewer {
+        width: 100%;
+        height: 80%;
+      }
     }
   </style>
 </head>
@@ -57,41 +62,27 @@
 <body>
   <header>🌤️ Smart Environment AR View</header>
 
-  <div class="container">
-    <button id="startButton">Aktifkan Kamera AR</button>
+  <div class="viewer-container">
+    <!-- Model Viewer 3D + AR -->
+    <model-viewer
+      src="assets/models/icon.glb"
+      alt="3D Weather Model"
+      ar
+      ar-modes="webxr scene-viewer quick-look"
+      camera-controls
+      auto-rotate
+      rotation-per-second="30deg"
+      shadow-intensity="1"
+      exposure="1.2"
+      environment-image="neutral"
+      poster="assets/images/loading.png"
+      loading="eager"
+    >
+    </model-viewer>
   </div>
 
-  <!-- Scene AR -->
-  <a-scene
-    embedded
-    arjs="sourceType: webcam; debugUIEnabled: false;"
-    vr-mode-ui="enabled: false"
-    renderer="antialias: true; alpha: true"
-    style="display: none;"
-    id="arScene"
-  >
-    <!-- Tambahkan model GLB -->
-    <a-entity
-      gltf-model="assets/models/icon.glb"
-      position="0 0 -2"
-      scale="1 1 1"
-      rotation="0 180 0"
-      animation="property: rotation; to: 0 360 0; loop: true; dur: 10000"
-    ></a-entity>
-
-    <a-camera position="0 0 0" look-controls></a-camera>
-  </a-scene>
-
-  <footer>© 2025 Smart Environment Monitor | Universitas Wahid Hasyim Semarang</footer>
-
-  <script>
-    const startButton = document.getElementById("startButton");
-    const arScene = document.getElementById("arScene");
-
-    startButton.addEventListener("click", () => {
-      arScene.style.display = "block";
-      startButton.style.display = "none";
-    });
-  </script>
+  <footer>
+    © 2025 Smart Environment Monitor | Universitas Wahid Hasyim Semarang
+  </footer>
 </body>
 </html>
