--- a/ar_view.html
+++ b/ar_view.html
@@ -1,176 +1,125 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather AR Scanner</title>
+<html lang="id">
+  <head>
+    <meta charset="UTF-8" />
+    <title>AR Weather Scanner - A-Frame</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Three.js + GLTF Loader -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.157.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.157.0/examples/js/loaders/GLTFLoader.js"></script>
+    <!-- A-Frame core -->
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body, html {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      font-family: 'Poppins', sans-serif;
-      background: #000;
-    }
+    <!-- AR.js untuk A-Frame -->
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
 
-    #camera-bg {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      z-index: 1;
-    }
+    <style>
+      body, html {
+        margin: 0;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        font-family: 'Poppins', sans-serif;
+      }
 
-    #three-canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: 2;
-      pointer-events: none;
-    }
+      #overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.6);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        z-index: 10;
+        transition: opacity 1s ease;
+      }
 
-    #scan-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.4);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      color: #fff;
-      z-index: 3;
-      font-size: 1.2rem;
-      animation: fadeOut 2s ease forwards;
-      animation-delay: 3s;
-    }
-
-    @keyframes fadeOut {
-      to {
+      #overlay.hide {
         opacity: 0;
-        visibility: hidden;
-      }
-    }
-
-    .scan-line {
-      width: 70%;
-      height: 2px;
-      background: linear-gradient(90deg, transparent, #00ffff, transparent);
-      animation: scanMove 3s linear infinite;
-    }
-
-    @keyframes scanMove {
-      0% { transform: translateY(-100px); opacity: 0; }
-      30% { opacity: 1; }
-      70% { opacity: 1; }
-      100% { transform: translateY(100px); opacity: 0; }
-    }
-
-    #btnStart {
-      position: fixed;
-      bottom: 30px;
-      background: #00bfff;
-      color: white;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 30px;
-      font-size: 1rem;
-      z-index: 4;
-      cursor: pointer;
-      box-shadow: 0px 4px 10px rgba(0, 191, 255, 0.5);
-    }
-  </style>
-</head>
-
-<body>
-  <video id="camera-bg" autoplay playsinline muted></video>
-  <canvas id="three-canvas"></canvas>
-
-  <div id="scan-overlay">
-    <div class="scan-line"></div>
-    <p>🔍 Scanning environment...</p>
-  </div>
-
-  <button id="btnStart">Start AR Scan</button>
-
-  <script>
-    const video = document.getElementById('camera-bg');
-    const canvas = document.getElementById('three-canvas');
-    const btnStart = document.getElementById('btnStart');
-
-    let scene, camera, renderer, model;
-
-    btnStart.addEventListener('click', async () => {
-      btnStart.style.display = 'none';
-      document.getElementById('scan-overlay').style.display = 'flex';
-
-      // Aktifkan kamera
-      try {
-        const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
-        video.srcObject = stream;
-      } catch (err) {
-        alert("Gagal mengakses kamera: " + err);
-        return;
+        pointer-events: none;
       }
 
-      initAR();
-    });
+      .scan-line {
+        width: 70%;
+        height: 4px;
+        background: linear-gradient(90deg, transparent, #00ffff, transparent);
+        animation: scan 2s linear infinite;
+      }
 
-    function initAR() {
-      scene = new THREE.Scene();
-      camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.1, 1000);
-      camera.position.z = 2;
+      @keyframes scan {
+        0% { transform: translateY(-100px); opacity: 0; }
+        50% { opacity: 1; }
+        100% { transform: translateY(100px); opacity: 0; }
+      }
 
-      renderer = new THREE.WebGLRenderer({ canvas: canvas, alpha: true, antialias: true });
-      renderer.setSize(window.innerWidth, window.innerHeight);
+      #btnStart {
+        margin-top: 20px;
+        background: #00bfff;
+        color: white;
+        border: none;
+        border-radius: 25px;
+        padding: 12px 25px;
+        font-size: 1rem;
+        cursor: pointer;
+        box-shadow: 0 4px 15px rgba(0,191,255,0.6);
+      }
 
-      const light = new THREE.DirectionalLight(0xffffff, 1);
-      light.position.set(2, 2, 2);
-      scene.add(light);
-      scene.add(new THREE.AmbientLight(0xffffff, 0.6));
+      #btnStart:hover {
+        background: #0099cc;
+      }
+    </style>
+  </head>
 
-      const loader = new THREE.GLTFLoader();
-      loader.load('assets/models/icons.glb', (gltf) => {
-        model = gltf.scene;
-        model.scale.set(0.7, 0.7, 0.7);
-        model.position.set(0, -0.2, 0);
-        scene.add(model);
-        animate();
-      }, undefined, (error) => {
-        console.error('Gagal memuat model:', error);
+  <body>
+    <!-- Overlay start -->
+    <div id="overlay">
+      <div class="scan-line"></div>
+      <p>🔍 Arahkan kamera ke lingkungan sekitar...</p>
+      <button id="btnStart">Mulai AR Scan</button>
+    </div>
+
+    <!-- Scene A-Frame -->
+    <a-scene
+      embedded
+      arjs="sourceType: webcam; debugUIEnabled: false;"
+      renderer="logarithmicDepthBuffer: true;"
+      vr-mode-ui="enabled: false"
+    >
+      <!-- Kamera AR -->
+      <a-camera position="0 0 0" look-controls-enabled="false"></a-camera>
+
+      <!-- Model 3D -->
+      <a-entity
+        id="weather-model"
+        gltf-model="url(assets/models/icons.glb)"
+        position="0 0 -2"
+        rotation="0 180 0"
+        scale="0.8 0.8 0.8"
+        animation="property: rotation; to: 0 360 0; loop: true; dur: 10000; easing: linear"
+        visible="false"
+      ></a-entity>
+
+      <!-- Cahaya -->
+      <a-entity light="type: ambient; color: #ffffff; intensity: 0.7"></a-entity>
+      <a-entity light="type: directional; intensity: 0.9" position="1 1 1"></a-entity>
+    </a-scene>
+
+    <script>
+      const overlay = document.getElementById("overlay");
+      const btnStart = document.getElementById("btnStart");
+      const model = document.getElementById("weather-model");
+
+      btnStart.addEventListener("click", () => {
+        overlay.classList.add("hide");
+
+        // Tunda sedikit untuk efek "scanning"
+        setTimeout(() => {
+          model.setAttribute("visible", true);
+        }, 2500);
       });
-
-      window.addEventListener('resize', () => {
-        camera.aspect = window.innerWidth / window.innerHeight;
-        camera.updateProjectionMatrix();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-      });
-    }
-
-    function animate() {
-      requestAnimationFrame(animate);
-      if (model) {
-        model.rotation.y += 0.01;
-        model.position.y = 0.2 * Math.sin(Date.now() * 0.002);
-      }
-      renderer.render(scene, camera);
-    }
-  </script>
-</body>
+    </script>
+  </body>
 </html>
