--- a/index.html
+++ b/index.html
@@ -1,54 +1,143 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Smart Environment Monitor</title>
-  <link rel="stylesheet" href="css/style.css" />
-</head>
-<body>
-  <header>
-    <h1>🌤️ Smart Environment Monitor</h1>
-    <button id="btnCamera">Aktifkan Kamera AR</button>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Weather AR View</title>
 
-  <main>
-    <div class="card" id="weather-card">
-      <h2>🌡️ Cuaca Saat Ini</h2>
-      <p id="lokasi">Kota Semarang</p>
-      <p id="suhu">Memuat suhu...</p>
-      <p id="kondisi">Mendeteksi kondisi...</p>
+    <!-- A-Frame + AR.js + Gesture -->
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-gesture-detector-component/dist/aframe-gesture-detector.min.js"></script>
+
+    <style>
+      html, body {
+        margin: 0; padding: 0;
+        width: 100%; height: 100%;
+        overflow: hidden;
+        font-family: "Poppins", sans-serif;
+        background: linear-gradient(180deg, #eaf4ff, #ffffff);
+      }
+
+      header {
+        background: rgba(255, 255, 255, 0.85);
+        backdrop-filter: blur(12px);
+        display: flex; justify-content: space-between; align-items: center;
+        padding: 10px 5%;
+        position: fixed; top: 0; width: 100%; z-index: 10;
+        box-shadow: 0 3px 12px rgba(0,0,0,0.1);
+      }
+
+      header h1 { font-size: 1.4rem; color: #0078d7; }
+      header button {
+        background: #0078d7; color: white; border: none;
+        padding: 8px 16px; border-radius: 8px; cursor: pointer;
+        transition: 0.3s;
+      }
+      header button:hover { background: #005fa3; transform: scale(1.05); }
+
+      #ar-container {
+        width: 100%; height: 100%;
+        position: fixed; top: 0; left: 0;
+        display: none;
+      }
+
+      #loading {
+        position: absolute; top: 50%; left: 50%;
+        transform: translate(-50%, -50%);
+        color: white; background: rgba(0,0,0,0.6);
+        padding: 12px 24px; border-radius: 8px;
+        font-size: 1rem; display: none;
+      }
+
+      footer {
+        text-align: center; padding: 10px;
+        position: fixed; bottom: 0; width: 100%;
+        background: rgba(255,255,255,0.85);
+        font-size: 0.85rem; color: #555;
+      }
+
+      @media (max-width: 768px) {
+        header h1 { font-size: 1.2rem; }
+        header button { padding: 6px 12px; font-size: 0.9rem; }
+      }
+    </style>
+  </head>
+
+  <body>
+    <header>
+      <h1>☁️ Weather AR Viewer</h1>
+      <button id="startAR">Mulai AR</button>
+    </header>
+
+    <!-- AR Container -->
+    <div id="ar-container">
+      <div id="loading">📡 Menyiapkan tampilan AR...</div>
+      <a-scene
+        embedded
+        renderer="antialias: true; alpha: true"
+        arjs="sourceType: webcam; debugUIEnabled: false;"
+        gesture-detector
+        vr-mode-ui="enabled: false"
+      >
+        <a-light type="ambient" color="#ffffff" intensity="1"></a-light>
+        <a-light type="directional" color="#ffffff" intensity="0.8" position="0 2 1"></a-light>
+
+        <a-entity
+          id="weatherModel"
+          gltf-model="assets/models/cloud.glb"
+          position="0 0 -1"
+          scale="0.5 0.5 0.5"
+          rotation="0 0 0"
+          visible="false"
+          gesture-handler
+        ></a-entity>
+
+        <a-camera look-controls="enabled: false"></a-camera>
+      </a-scene>
     </div>
 
-    <div class="card" id="sensor-card">
-      <h2>🌫️ Kualitas Udara</h2>
-      <p id="aqi">Mengukur kualitas udara...</p>
-      <div class="chart-container">
-        <canvas id="sensorChart"></canvas>
-      </div>
-    </div>
+    <footer>
+      © 2025 Weather AR Prototype — HS Studio
+    </footer>
 
-    <div class="card" id="ai-card">
-      <h2>🤖 Insight AI</h2>
-      <p id="ai-insight">Menunggu data sensor...</p>
-    </div>
-  </main>
+    <script>
+      const arContainer = document.getElementById('ar-container');
+      const startBtn = document.getElementById('startAR');
+      const loading = document.getElementById('loading');
+      const model = document.getElementById('weatherModel');
 
-  <section id="ar-section" class="hidden">
-    <div id="camera-container"></div>
-    <div class="scan-line"></div>
-    <p class="scanner-text">🔍 Memindai lingkungan sekitar...</p>
-  </section>
+      startBtn.addEventListener('click', () => {
+        arContainer.style.display = 'block';
+        startBtn.style.display = 'none';
+        loading.style.display = 'block';
+      });
 
-  <footer>
-    © 2025 Smart Environment Monitor | Universitas Wahid Hasyim Semarang
-  </footer>
+      model.addEventListener('model-loaded', () => {
+        loading.style.display = 'none';
+        model.setAttribute('visible', true);
+      });
 
-  <!-- Libraries -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/OBJLoader.js"></script>
-
-  <!-- Custom scripts -->
-  <script src="js/ar-dummy.js"></script>
-</body>
+      AFRAME.registerComponent('gesture-handler', {
+        schema: { rotationFactor: { default: 5 }, scaleFactor: { default: 1 } },
+        init: function () {
+          this.handleScale = this.handleScale.bind(this);
+          this.handleRotation = this.handleRotation.bind(this);
+          this.el.sceneEl.addEventListener('onefingermove', this.handleRotation);
+          this.el.sceneEl.addEventListener('twofingermove', this.handleScale);
+        },
+        remove: function () {
+          this.el.sceneEl.removeEventListener('onefingermove', this.handleRotation);
+          this.el.sceneEl.removeEventListener('twofingermove', this.handleScale);
+        },
+        handleRotation: function (event) {
+          this.el.object3D.rotation.y += event.detail.positionChange.x * 0.01 * this.data.rotationFactor;
+        },
+        handleScale: function (event) {
+          let scale = this.el.object3D.scale;
+          scale.multiplyScalar(1 + event.detail.spreadChange / 200 * this.data.scaleFactor);
+        }
+      });
+    </script>
+  </body>
 </html>
